[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Interface/InterfaceLayer.gd" type="Script" id=1]
[ext_resource path="res://src/KindergartenTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/Interface/Dialog/AnimatedRichText.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 6.0
bg_color = Color( 0.247059, 0.247059, 0.454902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
anti_aliasing = false

[node name="InterfaceLayer" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="MainContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBar" type="Label" parent="MainContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_bottom = -4.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.709804, 0.690196, 0.603922, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "pa' mostrar info."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" parent="MainContainer" instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 0.0
theme = ExtResource( 2 )

[node name="DisplayBox" type="Label" parent="MainContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -11.0
margin_right = 41.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "DisplayBox"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
